  cluster metrics.  AttributeFetcherImpl was improved accordingly.  (Yohann Callea)

* SOLR-17099: Do not return spurious tags when fetching metrics from a Solr node to another. (Pierre Salagnac)

* SOLR-17269: Prevent the "Coordinator node" feature from registering synthetic cores in ZooKeeper (Patson Luk)

Bug Fixes
---------------------
* SOLR-12813: subqueries should respect basic auth. (Rudy Seitz via Eric Pugh)

* PR-2475: Fixed node listing bug in Admin UI when different hostnames start with the same front part. (@hgdharold via Eric Pugh)

* SOLR-16659: Properly construct V2 base urls instead of replacing substring "/solr" with "/api" (Andrey Bozhko via Eric Pugh)

* SOLR-17247: 'WWW-Authenticate' headers missing in MultiAuthPlugin (Lamine Idjeraoui via Eric Pugh)

* SOLR-17304: Respect PKG_VERSIONS constraints in params.json when loading the schema plugins (Andrey Bozhko)

* SOLR-17118: Simplify CoreContainerProvider initialization and JettySolrRunner. Avoid deadlock/hang. (David Smiley)

* SOLR-17317: v2 APIs no longer return the incorrect content-type when 'wt=json' specified (Jason Gerlowski)

* SOLR-17315: Fixed "next step" example urls generated by bin/solr create commands to use the newly created  collection/core name. (Eric Pugh)

* SOLR-17326: Generated v2 'SolrRequest' implementations now all serialize to the correct response type (Christos Malliaridis via Jason Gerlowski)

* SOLR-16962: Restore ability to configure tlog directory. Changes largely focus on UpdateLog and
  HdfsUpdateLog. There is no anticipated change in existing behavior, other than that the `dir` parameter
  to the `<updateLog>` element in `solrconfig.xml`, which has long been silently ignored, will now be
  respected (Michael Gibney, David Smiley)

* SOLR-17255: Fix bugs in SolrParams.toLocalParamsString() (hossman)

Dependency Upgrades
---------------------
(No changes)

Other Changes
---------------------